html done for hummus

--- a/recipes/hummus.html
+++ b/recipes/hummus.html
@@ -35,11 +35,11 @@
            <div class="hummus from scratch steps">
            <div class="steps header"><h3><p><strong><em>How to Make Hummus from Scratch</h3></em></strong></p><b><p> The secret to the best hummus? It’s all about the order!</b> Seriously, this simple trick makes a huge difference.</p></div>
            <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Tahini and lemon juice go in first. Then, before you add anything else, turn on the food processor and let it run for a minute or two</li>
+            <li>After a minute of being whirled, whipped, and creamed in the food processor</li>
+            <li>Now, we can add the remaining hummus ingredients, but make sure you stand back and let that food processor run.</li>
+            <li>I also like adding the chickpeas in two batches and processing the first batch for a minute before following up with the rest.</li>
+            <li>Add a splash of cold water or aquafaba (chickpea liquid) at the very end. Pour it in while your food processor is running</li>
 
 
 
