base html done for recipie page

--- a/recipes/hummus.html
+++ b/recipes/hummus.html
@@ -14,7 +14,7 @@
         <div class="image of hummus">
         <img src="../images/hummus.jpeg" alt="hummas pic" height="310" width="310">
         <div>
-           <h2><p><B><em>recipe is a keeper—our family’s been making it for years!</em></B></h2>
+            recipe is a keeper—our family’s been making it for years!</em></B></h2>
            <h4><p>So many readers swear it’s their FOREVER hummus recipe. If you love amazing flavor and super-smooth hummus, you’ve got to try this.</p></h4>
            
            <div class="Ingredients">
