--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/ramen.html">Ramen</a>
-    <a href="recipes/hummus.html">Hummus</a>
-    
+    <ul>
+    <li><a href="recipes/ramen.html">Ramen</a></li>
+    <li><a href="recipes/hummus.html">Hummus</a></li>
+    <li><a href="recipes/egg salad.html">Egg salad</a></li>
+    </ul>
 </body>
 </html>
